--- a/MapApi.html
+++ b/MapApi.html
@@ -152,7 +152,7 @@ google.maps.event.addDomListener(window, 'load', initMap);
 
           <div style="position:relative;bottom:-10px;"  class="masthead clearfix">
             <div class="inner" style="position:relative;left:-160px;top:2px;">
-            <h3 class="masthead-brand"><a href="CoverPage.html"><img width="150" height="155" src = "http://i359.photobucket.com/albums/oo38/Dina_Daas/LOGOfinal_zpsfi2x8ws0.png" style="padding-top:0px;"></a></h3>
+            <h3 class="masthead-brand"><a href="index.html"><img width="150" height="155" src = "http://i359.photobucket.com/albums/oo38/Dina_Daas/LOGOfinal_zpsfi2x8ws0.png" style="padding-top:0px;"></a></h3>
               <nav>
                 <ul stye= "position:relative;bottom:70px;"class="nav masthead-nav">
                   <li><a href="MapApi.html">Near You</a></li>
