--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand"><a href="CoverPage.html"><img width="250" height="262" src = "http://i359.photobucket.com/albums/oo38/Dina_Daas/LOGOfinal_zpsfi2x8ws0.png" style="padding-top:0px;"></a></h3>
+              <h3 class="masthead-brand"><a href="index.html"><img width="250" height="262" src = "http://i359.photobucket.com/albums/oo38/Dina_Daas/LOGOfinal_zpsfi2x8ws0.png" style="padding-top:0px;"></a></h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="MapApi.html">Near You</a></li>
