--- a/About.html
+++ b/About.html
@@ -65,10 +65,10 @@
 
           <div style="position:relative;top:-70px;"  class="inner cover">
             <h1 class="cover-heading">About Us!</h1>
-            <img width="280px" height="280px" src = "https://drive.google.com/file/d/0B1rF7V7uO_4ma3ZYNWdQeEVhMWM/view?usp=sharing">
+            <img width="280px" height="280px" src = "http://i359.photobucket.com/albums/oo38/Dina_Daas/unnamed_zpsiwjvn59x.jpg">
 
             <p  class= "lead"> Dina Daas, 16, is a high school senior in Westchester, NY. Prior to moving to New York, she lived in Amman, Jordan for the majority of her life. Apart from being an avid women’s rights activist, she is the captain of the varsity cheerleading team, vice president of the Gay-Straight Alliance, a member of the Mock Trial team, and a Questbridge Scholar. In her free time, she enjoys theater, French culture, coding, cooking, and playing video games. She hopes to double major in Computer Science and biology, and eventually use technology as a tool for change.</p>
-            <img width="300px" height="280px" src = "https://drive.google.com/file/d/0B1rF7V7uO_4mSFNtZVlPNzctSUU/view?usp=sharing">
+            <img width="300px" height="280px" src = "http://i359.photobucket.com/albums/oo38/Dina_Daas/unnamed-1_zpsu0drxmah.jpg">
             <p class= "lead"> Jessica Langrock, 17, is a high school senior in Wayne, NJ. Besides being a full time student, she is a waitress and a freelance web designer. Additionally, Jessica is the president of her schools environmental club, vice president of Leo’s club, a member of National Honors society, and a starter on the varsity tennis team. In the future she plans to go to college as a Computer science major with a minor in business to ultimately have the skill sets to start a successful company.</p>
             <a href="https://twitter.com/alt_dJtech" class="twitter-follow-button" data-show-count="false" data-size="large" data-show-screen-name="false">Follow @alt_dJtech</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
           </div>
