--- a/MapApi.html
+++ b/MapApi.html
@@ -173,7 +173,7 @@ google.maps.event.addDomListener(window, 'load', initMap);
           <div style="position:relative;top:-160px;"  class="inner cover">
             <h1 id = "MapAPI" class="cover-heading">CatCall Map</h1>
              <div style="position:relative;right:-80px;top:7px;" id="map"></div>
-            <p style="position:relative;right:-10px;top:10px;" class="lead"> Click on the map to add markers indicating where you've encountered street harassment </p>
+            <p style="position:relative;right:-10px;top:10px;" class="lead"> Click to add markers where you've encountered street harassment </p>
             <p style="position:relative;right:-10px;top:10px;" class="lead">How Bad?</p>
             <p style="position:relative;right:-10px;top:10px;" class="lead">
               <button id = '1' onclick='reply_click(this.id)' class="btn btn-lg btn-default">bad</button>
