--- a/Profile.html
+++ b/Profile.html
@@ -69,7 +69,7 @@
           </div>
 
 
-         <div class="mastfoot">
+         <div style:"position:relative;top:30px" class="mastfoot">
             <div class="inner">
               <p>CatCallout calls attention to catcalling and provides a support network for victims of street harassment</a></p>
             </div>
