--- a/Profile.html
+++ b/Profile.html
@@ -63,13 +63,13 @@
             </div>
           </div>
 
-          <div style:"position:relative;top:-10px;bottom:30px" class="inner cover">
+          <div style:"position:relative;bottom:30px" class="inner cover">
             <h1 class="cover-heading">Our Mission</h1>
             <h6 class="lead">Jessica Langrock and Dina Daas are two upcoming high school seniors who are also Girls Who Code Alumni. During their 7-week Summer Immersion Program with Girls Who Code, they realized they had something in common; they were both victims of street harassment. They collectively decided that they wanted to change the normality surrounding the issue of cat calling. Thus, they created CatCallOut, a web application that allows victims of street harassment to report the location at which they were harassed, and discuss their experiences in the CatCafe forums. They hope to rid society of street harassment by calling out the cat-callers.</h6>
           </div>
 
 
-         <div style:"position:relative;top:30px" class="mastfoot">
+         <div class="mastfoot">
             <div class="inner">
               <p>CatCallout calls attention to catcalling and provides a support network for victims of street harassment</a></p>
             </div>
