--- a/Resources.html
+++ b/Resources.html
@@ -66,6 +66,14 @@
           <div style="position:relative;top:-70px;" class="inner cover">
             <h1 class="cover-heading">Why is cat calling a problem?</h1>
                   <p class="lead">Videos</p>
+                                      <ul class="dropdown-menu">
+                      <li> <iframe width="560" height="315" src="https://www.youtube.com/embed/b1XGPvbWn0A" frameborder="0" allowfullscreen>10 hrs NYC</iframe></li>
+                      <li><iframe width="560" height="315" src="https://www.youtube.com/embed/TubqX0silFo" frameborder="0" allowfullscreen>What it feels like</iframe></li>
+                      <li><iframe width="560" height="315" src="https://www.youtube.com/embed/oWEKD493IxY" frameborder="0" allowfullscreen></iframe><li>
+                      <li><iframe width="560" height="315" src="https://www.youtube.com/embed/oWEKD493IxY" frameborder="0" allowfullscreen></iframe></li>
+                      <li></li><iframe width="560" height="315" src="https://www.youtube.com/embed/9_Qg1NCkVUA?list=PL2uhHIMnEETpibTXx0WOWtwtW6aNlVTqP" frameborder="0" allowfullscreen></iframe><li></li>
+                      <li></li><iframe width="560" height="315" src="https://www.youtube.com/embed/ud3DLjREV34" frameborder="0" allowfullscreen></iframe></li>
+                    </ul>
               <iframe width="560" height="315" src="https://www.youtube.com/embed/b1XGPvbWn0A" frameborder="0" allowfullscreen>10 hrs NYC</iframe>
               <iframe width="560" height="315" src="https://www.youtube.com/embed/TubqX0silFo" frameborder="0" allowfullscreen>What it feels like</iframe>
               <iframe width="560" height="315" src="https://www.youtube.com/embed/lUJ24mblCLY" frameborder="0" allowfullscreen></iframe>
